Sem 3 NLP, SPA initial

--- a/Semester 3/NLP/NLP_Notes.ipynb
+++ b/Semester 3/NLP/NLP_Notes.ipynb
@@ -229,25 +229,61 @@
     "### Word2Vec\n",
     "- prediction based algorithm for generating word embeddings, dense vectors in a continuous vector space, which capture semantic and syntactic word relationships\n",
     "- focuses on learning distributed representations based on the context in which words appear\n",
+    "\n",
+    "<img alt=\"picture 10\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/e0b5d8e8caf3b31ac567f2dab1d03f75fcd43cb3dc73b3cff8b59aa01aee3885.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\" />\n",
+    "\n",
     "- two models: \n",
     "    1. Continuous Bag of Words (CBOW) - predicts the current word given the context, \n",
     "    2. Skip-gram - predicts the context given the current word\n",
     "        - hierarchical softmax\n",
     "        - negative sampling\n",
     "\n",
-    "#### Word2Vec: CBOW \n",
-    "\n",
-    "\n",
     "#### Word2Vec: Skip-gram with negative sampling\n",
     "The intuition of skip-gram is:\n",
     "1. Treat the target word and a neighboring context word as positive examples.\n",
     "2. Randomly sample other words in the lexicon to get negative samples.\n",
+    "    - if $k = 2$, then we have 2 -ve samples for each +ve sample\n",
     "3. Use logistic regression to train a classifier to distinguish those two cases.\n",
+    "    - $P(\\text{apricot | fruit}) > P(\\text{apricot | automobile})$\n",
+    "    - $P(+ | \\text{w,c}) = \\sigma(\\mathbf{c} \\cdot \\mathbf{w}) = \\frac{1}{1 + \\exp(-\\mathbf{c} \\cdot \\mathbf{w})}$\n",
+    "    - $P(- | \\text{w,c}) = 1 - P(+ | \\text{w,c}) = 1 - \\sigma(\\mathbf{c} \\cdot \\mathbf{w}) = \\frac{1}{1 + \\exp(\\mathbf{c} \\cdot \\mathbf{w})}$\n",
+    "    - above is for one context word,\n",
+    "        - $P(+ | w,c_{1:L}) = \\prod_{i=1}^L \\sigma(\\mathbf{c_i} \\cdot \\mathbf{w})$\n",
+    "        - $log P(+ | w,c_{1:L}) = \\sum_{i=1}^L \\log \\sigma(\\mathbf{c_i} \\cdot \\mathbf{w})$\n",
     "4. Use the learned weights as the embeddings.\n",
     "\n",
+    "Goal is to maximize the similarity between the target word and the context words, and minimize the similarity between the target word and the negative samples.\n",
     "\n",
-    "        \n",
-    "\n"
+    "<img alt=\"picture 12\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/75864001d86a0323352755e26078531540518c61b67bdd70c37dfa393610b2a2.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\" />\n",
+    "\n",
+    "$$ L_{CE} = - [ \\log \\sigma(\\mathbf{c_{pos}} \\cdot \\mathbf{w}) + \\sum_{i=1}^k \\log \\sigma(-\\mathbf{c_{neg_{i}}} \\cdot \\mathbf{w}) ] $$\n",
+    "\n",
+    "Gradient descent reminder:\n",
+    "- At each step:\n",
+    "    - Direction: we move in the direction of the negative gradient of the loss function\n",
+    "    - Magnitude: we move the value $\\alpha$ times the $\\frac{\\partial L}{\\partial w} L(f(x; w), y)$\n",
+    "    - $$ w^{(t+1)} = w^{(t)} - \\alpha \\frac{\\partial L}{\\partial w} L(f(x; w), y) $$\n",
+    "\n",
+    "<img alt=\"picture 13\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/5ddc814d446eb73aacf9861e3233364d74d7f4ad5af1114cd8a41762f16ed038.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\" />\n",
+    "\n",
+    "#### Word2Vec: CBOW \n",
+    "Continuous Bag-of-Words (CBOW) is another similar model for learning word vectors. It predicts the target word (i.e. “swing”) from source context words (i.e., “sentence should the sword”).\n",
+    "\n",
+    "<img alt=\"picture 11\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/89dbedd189a67c929afcfaeccc2fd4e9b39d0a41a447af2ae821b17ecf2796a0.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\" />\n",
+    "\n",
+    "Steps:\n",
+    "1. create model architecture with input layer, hidden layer, and output layer\n",
+    "    - input layer: one-hot encoding of the context words, with $\\text{dim} = |V| \\times |C| \\times 1$\n",
+    "    - hidden layer: $\\text{dim} = |\\text{embedding}| \\times 1$\n",
+    "    - output layer: softmax layer, with $\\text{dim} = |V| \\times 1$\n",
+    "2. forward propagation\n",
+    "    - perform matrix multiplication between the input layer and the hidden layer, then hidden layer and the output layer\n",
+    "    - finally apply softmax to the output layer\n",
+    "        $$ y_i = \\frac{\\exp(u_i)}{\\sum_{j=1}^{|V|} \\exp(u_j)} $$\n",
+    "3. error calculation\n",
+    "    - cross entropy loss\n",
+    "        $$ L_{CE} = - \\sum_{i=1}^{|V|} y_i \\log \\hat{y_i} $$\n",
+    "4. weight tuning using backward pass\n"
    ]
   },
   {
@@ -389,15 +425,12 @@
     "- therefore, we have $t_{1:n} = \\arg\\max_{t_{1:n}} \\prod_{i=1}^n P(w_i | t_i) P(t_i | t_{i-1})$, which correspond to the emission and transition probabilities respectively\n",
     "\n",
     "#### Viterbi algorithm\n",
-    "- finds the optimal sequence of tags, given an observation sequence and an HMM $\\lambda = (A, B)$, it re \n",
+    "- finds the optimal sequence of tags, given an observation sequence and an HMM $\\lambda = (A, B)$, it returns the state path through the HMM that assigns maximum likelihood to the observation sequence.\n",
+    "- $V_{1,j} = P(o_1 | q_1 = S_j) \\times \\pi_j$\n",
+    "- $V_{t,j} = \\max_{1 \\leq i \\leq N} V_{t-1, i} \\times P(o_t | q_t = S_j) \\times a_{ij}$\n",
+    "- $V_{t,j} = \\max_{1 \\leq i \\leq N} V_{t-1, i} \\times b_j(o_t) \\times a_{ij}$\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Viterbi algorithm for finding the optimal sequence of tags. Given an observation sequence and\n",
-    "an HMM λ = (A,B), the algorithm returns the state path through the HMM that assigns maximum likelihood\n",
-    "to the observation sequence.\n"
+    "where $V_{t-1, i}$ is the previous Viterbi path probability from the previous time step, $b_j(o_t)$ is the probability of observing $o_t$ from state $q_j$, and $a_{ij}$ is the probability of moving from state $q_i$ to state $q_j$."
    ]
   },
   {
