Sem 3 NLP, SPA initial

--- a/Semester 3/NLP/NLP_Notes.ipynb
+++ b/Semester 3/NLP/NLP_Notes.ipynb
@@ -430,7 +430,30 @@
     "- $V_{t,j} = \\max_{1 \\leq i \\leq N} V_{t-1, i} \\times P(o_t | q_t = S_j) \\times a_{ij}$\n",
     "- $V_{t,j} = \\max_{1 \\leq i \\leq N} V_{t-1, i} \\times b_j(o_t) \\times a_{ij}$\n",
     "\n",
-    "where $V_{t-1, i}$ is the previous Viterbi path probability from the previous time step, $b_j(o_t)$ is the probability of observing $o_t$ from state $q_j$, and $a_{ij}$ is the probability of moving from state $q_i$ to state $q_j$."
+    "where $V_{t-1, i}$ is the previous Viterbi path probability from the previous time step, $b_j(o_t)$ is the probability of observing $o_t$ from state $q_j$, and $a_{ij}$ is the probability of moving from state $q_i$ to state $q_j$.\n",
+    "\n",
+    "#### Numericals \n",
+    "\n",
+    "1. Given an observation sequence $O = o_1, o_2, ..., o_T$, and an HMM $\\lambda = (A, B)$, find the probability of the observation sequence $P(O | \\lambda)$.\n",
+    "    - Forward algorithm\n",
+    "    - Steps:\n",
+    "        1. Initialization: $\\alpha_1(i) = \\pi_i b_i(o_1)$\n",
+    "        2. Induction: $\\alpha_{t+1}(j) = \\sum_{i=1}^N \\alpha_t(i) a_{ij} b_j(o_{t+1})$\n",
+    "        3. Termination: $P(O | \\lambda) = \\sum_{i=1}^N \\alpha_T(i)$\n",
+    "2. Given an observation sequence $O = o_1, o_2, ..., o_T$, and an HMM $\\lambda = (A, B)$, find the most likely state sequence $Q = q_1, q_2, ..., q_T$.\n",
+    "    - Viterbi algorithm\n",
+    "    - Steps:\n",
+    "        1. Initialization: $\\delta_1(i) = \\pi_i b_i(o_1)$, $\\psi_1(i) = 0$\n",
+    "        2. Recursion: $\\delta_t(j) = \\max_{1 \\leq i \\leq N} \\delta_{t-1}(i) a_{ij} b_j(o_t)$\n",
+    "        3. Termination: $P^* = \\max_{1 \\leq i \\leq N} \\delta_T(i)$\n",
+    "        4. Find the best path by tracing the backpointers, each with the largest probability at each time step\n",
+    "3. Given an observation sequence $O = o_1, o_2, ..., o_T$, find the best HMM $\\lambda = (A, B)$, i.e., the one that maximizes $P(O | \\lambda)$.\n",
+    "    - Forward-backward algorithm 🙏\n",
+    "\n",
+    "#### Maximum Entropy Markov Models\n",
+    "- MEMMs are discriminative models, they directly model $P(t_{1:n}| w_{1:n})$ instead of $P(w_{1:n} | t_{1:n}) P(t_{1:n})$\n",
+    "- thus, possible tag sequence, $\\hat{T} = \\arg\\max_T \\prod_{i=1}^n P(t_i | w_i, t_{i-1})$\n",
+    "- given a sequence of observations, feature functions, and corresponding hidden states, we use gradient descent to find the optimal weights for maximizing the log-likelihood of the training data"
    ]
   },
   {
