--- a/Semester 3/BDS/BDS_Notes.ipynb
+++ b/Semester 3/BDS/BDS_Notes.ipynb
@@ -379,6 +379,9 @@
     "    - HDFS (Hadoop Distributed File System)\n",
     "    - MapReduce\n",
     "    - YARN (Yet Another Resource Negotiator)\n",
+    "\n",
+    "<img alt=\"picture 0\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/ebd34154f5a8c257141e1647b0a8a5d7638bbef6f1e1dde8398ff3ce7677aab1.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\">\n",
+    "\n",
     "- distributed storage: HDFS, stores data across multiple nodes for scalability and fault tolerance\n",
     "- distributed processing: MapReduce, allows parallel processing of vast datasets across a cluster of computers\n",
     "- scalability: scales horizontally by adding more nodes to the cluster to accommodate growing data volumes\n",
@@ -402,7 +405,54 @@
     "\n",
     "#### HDFS Architecture\n",
     "\n",
+    "<img alt=\"picture 1\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/1bad92038b580b8fd5e36ac5de6de728a0a9fc8458b89f14e7016228cdb8df75.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\">\n",
+    "\n",
+    "- Master slave architecture within a HDFS cluster\n",
+    "- Master node with NameNode\n",
+    "    - maintains namespace - filename to blocks and their replica mappings\n",
+    "    - serves as arbitrator and doesn't handle actual data flow\n",
+    "    - HDFS client app interacts with NameNode for metadata\n",
+    "- Slave nodes with DataNode\n",
+    "    - serves block read/write from clients\n",
+    "    - serves create/delete/replicate requests from NameNode\n",
+    "    - DataNodes interact with each other for pipeline reads and writes\n",
+    "- NameNode functions:\n",
+    "    - maintains and manages the file system namespace, with two files:\n",
+    "        1. FsImage: contains mapping of blocks to file, hierarchy, file properties, permissions\n",
+    "        2. EditLog: transaction log of changes to metadata in FsImage\n",
+    "    - does not store any data, only metadata about files\n",
+    "    - runs on master node while DataNodes run on slave nodes\n",
+    "    - records each change that takes place to the metadata, e.g. if a file is deleted in HDFS, the NameNode will immediately record this in the EditLog\n",
+    "    - receives periodic heartbeat and a block report from all the DataNodes in the cluster to ensure that the DataNodes are live\n",
+    "    - ensures replication factor is maintained across DataNode failures\n",
+    "    - in case of the DataNode failure, the NameNode chooses new DataNodes for new replicas, balance disk usage and manages the communication traffic to the DataNodes\n",
+    "- DataNode functions:\n",
+    "    - stores data in the local file system\n",
+    "    - sends heartbeat messages to the NameNode periodically to confirm that it is alive\n",
+    "    - sends block report to the NameNode periodically to report the list of blocks it is storing\n",
+    "    - serves read/write requests from clients\n",
+    "    - serves create/delete/replicate requests from NameNode\n",
+    "    - in case of a block failure, the NameNode will choose a new DataNode to create a replica of the block\n",
+    "- Secondary NameNode functions:\n",
+    "    - performs periodic checkpoints of the namespace by merging the FsImage and EditLog\n",
+    "    - downloads the FsImage and EditLog from the NameNode, merges them, and uploads the new FsImage back to the NameNode\n",
+    "    - does not store any data, only metadata about files\n",
+    "    - runs on a separate node from the NameNode\n",
+    "    - performs regular checkpoints of the namespace by merging the FsImage and EditLog, hence called CheckpointNode\n",
+    "    \n",
     "#### YARN Architecture\n",
+    "\n",
+    "<img alt=\"picture 2\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/8e7bb7d535fc51c60dcb642eb68e8e9ebc5c9688579c2011d20d3b059d71596d.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\">\n",
+    "\n",
+    "YARN workflow:\n",
+    "1. client program submits the application / job with specs to start AppMaster\n",
+    "2. ResourceManager asks a NodeManager to start a container which can host the ApplicationMaster and then launches ApplicationMaster\n",
+    "3. ApplicationMaster on start-up registers with ResourceManager. So now the client can contact the ApplicationMaster directly also for application specific details\n",
+    "4. As the application executes, AppMaster negotiates resources in the form of containers via the resource request protocol involving the ResourceManager\n",
+    "5. As a container is allocated successfully for an application, AppMaster works with the NodeManager on same or diff node to launch the container as per the container spec. The spec involves how the AppMaster can communicate with the container\n",
+    "6. App specific code inside container provides runtime information to AppMaster for progress, status etc. via application-specific protocol\n",
+    "7. Client that submitted the app / job can directly communicate with the AppMaster for progress, status updates. via the application specific protocol\n",
+    "8. On completion of the app / job, AppMaster de-registers from ResourceManager and shuts down. So the containers allocated can be re-purposed.\n",
     "\n",
     "#### Modes of operation\n",
     "1. Local (Standalone) Mode\n",
@@ -455,36 +505,147 @@
     "\n",
     "| Feature                    | MongoDB                         | Cassandra                       |\n",
     "|----------------------------|---------------------------------|---------------------------------|\n",
-    "| **Data Model**             | Document-based (BSON format)    | Wide-column store               |\n",
-    "| **Query Language**         | MongoDB Query Language (MQL)     | CQL (Cassandra Query Language)  |\n",
-    "| **Schema**                 | Dynamic schema (schema-less)     | Schema-agnostic                |\n",
-    "| **Consistency Model**      | Eventual consistency            | Tunable consistency (can be adjusted per query) |\n",
-    "| **Scaling**                | Horizontal scaling              | Linearly scalable               |\n",
-    "| **Indexing**               | Rich indexing options            | Primary and secondary indexes   |\n",
-    "| **Transactions**           | Supports multi-document transactions | Limited support for transactions |\n",
-    "| **Joins**                  | Supports joins (with limitations) | No support for traditional joins |\n",
-    "| **Data Distribution**      | Sharding for horizontal scaling | Automatic data distribution across nodes |\n",
-    "| **Use Case**               | General-purpose, diverse use cases | Time-series data, write-intensive applications |\n",
-    "| **ACID Compliance**        | Supports ACID transactions (in certain configurations) | ACID compliance with tunable consistency |\n",
+    "| Data Model             | Document-based (BSON format)    | Wide-column store               |\n",
+    "| Query Language         | MongoDB Query Language (MQL)     | CQL (Cassandra Query Language)  |\n",
+    "| Schema                 | Dynamic schema (schema-less)     | Schema-agnostic                |\n",
+    "| Consistency Model      | Eventual consistency            | Tunable consistency (can be adjusted per query) |\n",
+    "| Scaling                | Horizontal scaling              | Linearly scalable               |\n",
+    "| Indexing               | Rich indexing options            | Primary and secondary indexes   |\n",
+    "| Transactions           | Supports multi-document transactions | Limited support for transactions |\n",
+    "| Joins                  | Supports joins (with limitations) | No support for traditional joins |\n",
+    "| Data Distribution      | Sharding for horizontal scaling | Automatic data distribution across nodes |\n",
+    "| Use Case               | General-purpose, diverse use cases | Time-series data, write-intensive applications |\n",
+    "| ACID Compliance        | Supports ACID transactions (in certain configurations) | ACID compliance with tunable consistency |\n",
     "\n",
-    "#### Common MongoDB commands:\n",
-    "1. show databases: `show databases`\n",
+    "### Common MongoDB commands:\n",
+    "1. show databases: `show databases` / `show dbs`\n",
     "2. switch database: `use <database_name>`\n",
     "3. show collections: `show collections`\n",
+    "4. create collection: `db.createCollection(\"<collection_name>\")`\n",
     "4. insert document: `db.<collection_name>.insert({ key: value })`\n",
     "5. find documents: `db.<collection_name>.find()`\n",
-    "6. query with criteria: `db.<collection_name>.find({ key: value })`\n",
-    "7. update document: `db.<collection_name>.update({ key: value }, { $set: { new_key: new_value } })`\n",
+    "6. query with criteria: \n",
+    "    - `db.<collection_name>.find({ key: value })`\n",
+    "    - `db.<collection_name>.find({ key: value }, { key: 1, _id: 0 })` (projection)\n",
+    "    - `db.<collection_name>.find({ key: { $gt: value } })` (greater than)\n",
+    "    - `db.<collection_name>.find({ key1: value1, key2: value2 })` (AND)\n",
+    "    - `db.<collection_name>.find({ $or: [{ key1: value1 }, { key2: value2 }] })` (OR)\n",
+    "    - `db.<collection_name>.find({ key: { $in: [value1, value2] } })` (IN)\n",
+    "7. update document: \n",
+    "    - `db.<collection_name>.update({ key: value }, { $set: { new_key: new_value } })`\n",
+    "    - `db.<collection_name>.update({ key: value }, { $set: { new_key: new_value } }, { upsert: true })`\n",
     "8. delete document: `db.<collection_name>.remove({ key: value })`\n",
     "9. aggregate: `db.<collection_name>.aggregate([ ... ])`\n",
     "10. create index: `db.<collection_name>.createIndex({ key: 1 })`\n",
     "11. drop index: `db.<collection_name>.dropIndex(\"index_name\")`\n",
     "12. count documents: `db.<collection_name>.count()`\n",
     "13. limit results: `db.<collection_name>.find().limit(5)`\n",
-    "14. sort results: `db.<collection_name>.find().sort({ key: 1 })`\n",
+    "14. sort results: \n",
+    "    - `db.<collection_name>.find().sort({ key: 1 })`\n",
+    "    - `db.<collection_name>.find().sort({ key1: 1, key2: -1 })` (sort by key1 ascending, then by key2 descending)\n",
     "15. projection (select fields): `db.<collection_name>.find({}, { key: 1, _id: 0 })`\n",
     "16. bulk write operations: `db.<collection_name>.bulkWrite([ ... ])`\n",
-    "17. show help: `db.<collection_name>.help()`\n"
+    "17. show help: `db.<collection_name>.help()`\n",
+    "\n",
+    "#### Aggregation pipeline\n",
+    "- framework for data aggregation modeled on the concept of data processing pipelines\n",
+    "- documents enter a multi-stage pipeline that transforms the documents into an aggregated result\n",
+    "- each stage transforms the documents as they pass through the pipeline\n",
+    "- `db.<collection_name>.aggregate(pipeline, options)`\n",
+    "- eg: \n",
+    "    1. `$match` stage filters the documents by some criteria\n",
+    "    2. `$group` stage groups the documents by some criteria\n",
+    "    3. `$sort` stage sorts the documents by some criteria\n",
+    "    4. `$project` stage selects some fields from the documents\n",
+    "    5. `$limit` stage limits the number of documents to be returned\n",
+    "    6. `$project` stage selects some fields from the documents\n",
+    "\n",
+    "\n",
+    "Import data from CSV:\n",
+    "\n",
+    "`mongoimport --db <database_name> --collection <collection_name> --type csv --headerline --file <file_name>`\n",
+    "\n",
+    "Export data to CSV:\n",
+    "\n",
+    "`mongoexport --db <database_name> --collection <collection_name> --type csv --fields <field1,field2> --out <file_name>`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Types of parallelism\n",
+    "\n",
+    "- Data Parallelism:\n",
+    "  - Definition: Distribute data across multiple processing units or nodes; perform the same operation concurrently.\n",
+    "  - Example: Distribute portions of a large dataset to multiple processors; each processor independently processes its assigned data.\n",
+    "\n",
+    "- Tree Parallelism:\n",
+    "  - Definition: Organize parallel tasks hierarchically in a tree-like structure; tasks are divided into sub-tasks forming a tree structure.\n",
+    "  - Example: Main task divided into sub-tasks; each sub-task further divided into more specific tasks for efficient resource utilization.\n",
+    "\n",
+    "- Task Parallelism:\n",
+    "  - Definition: Break down a program into independent tasks or processes; execute tasks concurrently.\n",
+    "  - Example: Execute different program functions or modules concurrently without relying on each other's output; common in parallel programming frameworks.\n",
+    "\n",
+    "- Request Parallelism:\n",
+    "  - Definition: Divide a computation into stages in a pipeline; each stage represents a distinct operation.\n",
+    "  - Example: Tasks in a pipeline architecture are handled by separate units; each stage operates on data concurrently. Used in scenarios with sequential dependence of operations.\n",
+    "\n",
+    "## Map Reduce \n",
+    "- programming model for processing large datasets in parallel across a cluster of computers\n",
+    "- MapReduce is a framework for processing data in parallel across a cluster of computers\n",
+    "\n",
+    "A MapReduce framework (or system) is usually composed of three operations (or steps):\n",
+    "1. Map: each worker node applies the map function to the local data, and writes the output to a temporary storage. A master node ensures that only one copy of the redundant input data is processed.\n",
+    "  `Map(k1,v1) → list(k2,v2)`\n",
+    "2. Shuffle: worker nodes redistribute data based on the output keys (produced by the map function), such that all data belonging to one key is located on the same worker node.\n",
+    "3. Reduce: worker nodes now process each group of output data, per key, in parallel.\n",
+    "  `Reduce(k2, list (v2)) → list((k3, v3))`\n",
+    "\n",
+    "```python\n",
+    "function map(String name, String document):\n",
+    "    // name: document name\n",
+    "    // document: document contents\n",
+    "    for each word w in document:\n",
+    "        emit (w, 1)\n",
+    "\n",
+    "function reduce(String word, Iterator partialCounts):\n",
+    "    // word: a word\n",
+    "    // partialCounts: a list of aggregated partial counts\n",
+    "    sum = 0\n",
+    "    for each pc in partialCounts:\n",
+    "        sum += pc\n",
+    "    emit (word, sum)\n",
+    "```\n",
+    "\n",
+    "## Apache Spark\n",
+    "- open-source, distributed computing system that provides a fast and general-purpose cluster-computing framework for big data processing\n",
+    "- developed to address the limitations of the MapReduce model and offers a more flexible and efficient alternative\n",
+    "- features:\n",
+    "    - speed: performs in-memory processing, which significantly improves the processing speed compared to the traditional MapReduce model that relies heavily on disk-based storage\n",
+    "    - ease of use: provides high-level APIs in Java, Scala, Python, and R, making it accessible to a broad audience\n",
+    "    - versatility: supports a wide range of data processing tasks, including batch processing, interactive queries, streaming analytics, and machine learning\n",
+    "    - in-memory processing: utilizes resilient distributed datasets (RDDs), an immutable distributed collection of objects, to store data in-memory across a cluster\n",
+    "    - fault tolerance: provides fault tolerance through lineage information stored in RDDs\n",
+    "    - data processing libraries: comes with built-in libraries for various data processing tasks, such as Spark SQL for structured data processing, MLlib for machine learning, GraphX for graph processing, and Spark Streaming for real-time data processing\n",
+    "    - ease of integration: can be easily integrated with other popular big data technologies, such as Apache Hadoop, Apache Hive, Apache HBase, and more\n",
+    "    - lazy evaluation: uses lazy evaluation, meaning that transformations on RDDs are not executed immediately\n",
+    "    - community support: has a large and active open-source community, which contributes to its development and provides support through forums, mailing lists, and documentation\n",
+    "    - cluster manager integration: can run on various cluster managers, including Apache Mesos, Apache Hadoop YARN, and its standalone built-in cluster manager\n",
+    "\n",
+    "<img alt=\"picture 3\" src=\"https://cdn.jsdelivr.net/gh/sharatsachin/images-cdn@master/images/165f411f2ed28f5b894819b57bc4f58dc4aebf98a14e9194a18cb50f9d98d8b4.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto;\">\n",
+    "\n",
+    "2 main abstractions:\n",
+    "1. Resilient Distributed Dataset (RDD)\n",
+    "    - immutable, distributed collection of objects\n",
+    "    - partitioned across nodes in a cluster\n",
+    "    - can be created from Hadoop InputFormats (such as HDFS files) or by transforming other RDDs\n",
+    "    - can be cached in memory across machines, can be recomputed if lost due to node failure\n",
+    "2. Directed Acyclic Graph (DAG)\n",
+    "    - sequence of computations on data\n",
+    "    - each node in the graph represents a RDD, each edge represents a transformation on the data\n",
+    "    - transformations are lazy, only executed when an action is called, evaluated in parallel, fault-tolerant, can be recomputed if lost due to node failure"
    ]
   }
  ],
