--- a/Semester 3/DL/DL_Notes.ipynb
+++ b/Semester 3/DL/DL_Notes.ipynb
@@ -385,16 +385,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Underfitting and Overfitting\n",
     "\n",
@@ -575,6 +565,73 @@
     "\n",
     "where $J$ is the objective function, $\\theta$ is the parameter vector, $g_t$ is the gradient of the objective function with respect to $\\theta$ at time step $t$, $\\eta$ is the learning rate, $v_t$ and $s_t$ are estimates of the first and second moments of the gradients respectively, $\\hat{v}_t$ and $\\hat{s}_t$ are bias-corrected estimates of the first and second moments of the gradients respectively, $\\beta_1$ and $\\beta_2$ are exponential decay rates for the moment estimates (usually set to 0.9 and 0.999 respectively), and $\\epsilon$ is a smoothing term to avoid division by zero."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regularization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convolutional Neural Networks\n",
+    "\n",
+    "- networks that use convolutional layers to detect patterns in the input data and pooling layers to reduce the dimensionality of the data\n",
+    "    - convolutional layers use filters to detect patterns in the input data\n",
+    "    - convolution operation:\n",
+    "        - say input size is $n \\times n$ and filter size is $f \\times f$, and the stride is $s$\n",
+    "        - for valid padding (no padding) \n",
+    "            - then the output size is $\\left( \\frac{n - f}{s} + 1 \\right) \\times \\left( \\frac{n - f}{s} + 1 \\right)$\n",
+    "        - for same padding (padding such that the output size is the same as the input size)\n",
+    "            - then the padding size is $\\frac{f - 1}{2}$ and the output size is $\\left( \\frac{n}{s} \\right) \\times \\left( \\frac{n}{s} \\right)$\n",
+    "            - for a $3 \\times 3$ filter, the padding size is $1$, for a $5 \\times 5$ filter it is $2$, for a $7 \\times 7$ filter it is $3$, and so on\n",
+    "        - for generic cases with padding $p$\n",
+    "            - the output size is $\\left( \\frac{n + 2p - f}{s} + 1 \\right) \\times \\left( \\frac{n + 2p - f}{s} + 1 \\right)$\n",
+    "- calculating the number of parameters in a convolutional layer:\n",
+    "    - if the input size is $n \\times n$, the filter size is $f \\times f$, the number of filters is $k$, and the stride is $s$\n",
+    "    - then the number of parameters is $f \\times f \\times k + 1$ (the $+1$ is for the bias term)\n",
+    "\n",
+    "### Parameters in Convolution Layer\n",
+    "- Input image: $B \\times W_{in} \\times H_{in} \\times C_{in}$, where $B$ is the number of samples, $W_{in}$ and $H_{in}$ are the width and height of the input image, and $C_{in}$ is the number of channels in the input image\n",
+    "- Convolution filter: weight parameters are $C_{in} \\times C_{out} \\times K_W \\times K_H$, and bias parameters are $C_{out}$ where $C_{out}$ is the number of filters, and $K_W$ and $K_H$ are the width and height of the filter\n",
+    "- Output activation: $B \\times W_{out} \\times H_{out} \\times C_{out}$, where $W_{out}$ and $H_{out}$ are the width and height of the output activation, and $C_{out}$ is the number of filters\n",
+    "    - $C_{out}$ filters of shape $C_{in} \\times K_W \\times K_H$ operate on each sample\n",
+    "- The number of parameters depends on the number of kernels and the kernel size\n",
+    "    - number of kernels in layer $(l - 1)$: $K_{l-1}$\n",
+    "    - kernel size: $f \\times f$\n",
+    "    - number of kernels in layer $l$: $K_l$\n",
+    "    - number of parameters in layer $l$: $K_{l-1} \\times f \\times f \\times K_l$\n",
+    "\n",
+    "### Pooling Layer\n",
+    "- helps to achieve image invariance, where objects can appear anywhere in the image and still get detected\n",
+    "- used for sub-sampling, reducing the size of the representation, and speeding up computation\n",
+    "- two types: max pooling and average pooling\n",
+    "    - max pooling: takes the maximum of the subregion that is considered\n",
+    "    - average pooling: computes the average of the subregion that is considered\n",
+    "- pooling is applied on each of the channels\n",
+    "- applying a filter of size $f$ and stride $s$ without padding gives an output dimension of $\\left( \\frac{n - f}{s} + 1 \\right) \\times \\left( \\frac{n - f}{s} + 1 \\right)$\n",
+    "    - fixed computation, no parameters to be learned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -593,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
